Only add equity accounts to reports if expert mode is enabled

This restores Net Worth Graph behaviour in non export mode.

Thanks to David Houlden for pointing out.

BUG:382378
FIXED-IN:4.8.1