kmymoney/mymoney/mymoneyreport.cpp
@@ -16,6 +16,7 @@
  ***************************************************************************/
 
 #include "mymoneyreport.h"
+#include <kmymoneyglobalsettings.h>
 
 // ----------------------------------------------------------------------------
 // QT Includes
@@ -146,16 +147,17 @@ MyMoneyReport::MyMoneyReport(ERowType _rt, unsigned _ct, dateOptionE _dl, EDetai
   if (_rt == MyMoneyReport::eAssetLiability) {
     addAccountGroup(MyMoneyAccount::Asset);
     addAccountGroup(MyMoneyAccount::Liability);
-    addAccountGroup(MyMoneyAccount::Equity);
+    if (KMyMoneyGlobalSettings::expertMode())
+        addAccountGroup(MyMoneyAccount::Equity);
     m_showRowTotals = true;
   }
   if (_rt == MyMoneyReport::eAccount) {
     addAccountGroup(MyMoneyAccount::Asset);
     addAccountGroup(MyMoneyAccount::Liability);
-    addAccountGroup(MyMoneyAccount::Equity);
+    if (KMyMoneyGlobalSettings::expertMode())
+        addAccountGroup(MyMoneyAccount::Equity);
     addAccountGroup(MyMoneyAccount::Asset);
     addAccountGroup(MyMoneyAccount::Liability);
-    addAccountGroup(MyMoneyAccount::Equity);
     addAccountGroup(MyMoneyAccount::Checkings);
     addAccountGroup(MyMoneyAccount::Savings);
     addAccountGroup(MyMoneyAccount::Cash);
@@ -263,7 +265,8 @@ void MyMoneyReport::setRowType(ERowType _rt)
   if (_rt == MyMoneyReport::eAssetLiability) {
     addAccountGroup(MyMoneyAccount::Asset);
     addAccountGroup(MyMoneyAccount::Liability);
-    addAccountGroup(MyMoneyAccount::Equity);
+    if (KMyMoneyGlobalSettings::expertMode())
+        addAccountGroup(MyMoneyAccount::Equity);
   }
   if (_rt == MyMoneyReport::eExpenseIncome) {
     addAccountGroup(MyMoneyAccount::Expense);
